--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ charset-normalizer==3.4.4
 click==8.3.1
 decorator==5.2.1
 Flask==3.1.2
+gunicorn==25.0.1
 idna==3.11
 itsdangerous==2.2.0
 Jinja2==3.1.6
